--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
         <div class="image"></div>
 
         <div class="content">
-          <h3>O que faz nosso café tão especial?</h3>
+          <h3>O que faz o nosso café tão especial?</h3>
           <p>
             Lorem ipsum dolor, sit amet consectetur adipisicing elit. Rerum
             porro reprehenderit, fugiat iste enim aliquid consectetur expedita
