--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" type="image/png" sizes="64x64" href="imgs/icon.png" />
+    <link rel="icon" type="image/png" sizes="64x64" href="imgs/icon2.png" />
     <link rel="stylesheet" href="styles.css" />
     <!-- font awesome cdn links-->
     <link
